--- a/ML_basic/ML_hyperparameter.ipynb
+++ b/ML_basic/ML_hyperparameter.ipynb
@@ -85,7 +85,7 @@
     "Just your regular densely-connected NN layer.\n",
     "\n",
     "\n",
-    "* `model.colpile`에 대한 설명: https://www.tensorflow.org/api_docs/python/tf/keras/Model#compile\n",
+    "* `model.comlpile`에 대한 설명: https://www.tensorflow.org/api_docs/python/tf/keras/Model#compile\n",
     "\n",
     "training to minimize the model's mean squared error."
    ]
