--- a/혼공 머신러닝/(9) XgBoost.ipynb
+++ b/혼공 머신러닝/(9) XgBoost.ipynb
@@ -8,7 +8,7 @@
     "# XGBoost\n",
     "\n",
     "\n",
-    "GBM기반 알고리즘으로 GBM의 느린 수행 시간 및 과적합 규재 부재 등의 문제를 해결한 알고리즘\n",
+    "GBM기반 알고리즘으로 GBM의 느린 수행 시간 및 과적합 규제 부재 등의 문제를 해결한 알고리즘\n",
     "\n",
     "### XGBoost 파라미터\n",
     "\n",
