--- a/tf_ML/7-1 인공신경망.ipynb
+++ b/tf_ML/7-1 인공신경망.ipynb
@@ -5,7 +5,7 @@
    "id": "6c46d4ff",
    "metadata": {},
    "source": [
-    "# 인공 신경망\n",
+    "# 7-1. 인공신경망\n",
     "\n",
     "* 텐서플로를 사용해 인공 신경망 모델\n",
     "* 패션 MINST 데이터셋\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "78ed679e",
    "metadata": {},
    "outputs": [],
@@ -28,25 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6afab34a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-      "29515/29515 [==============================] - 0s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-      "26421880/26421880 [==============================] - 2s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-      "5148/5148 [==============================] - 0s 0s/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-      "4422102/4422102 [==============================] - 0s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow import keras\n",
     "\n",
@@ -55,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "a24afb3a",
    "metadata": {
     "scrolled": true
@@ -84,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "60d844b7",
    "metadata": {},
    "outputs": [
@@ -110,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "76727250",
    "metadata": {},
    "outputs": [
@@ -137,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "765748dc",
    "metadata": {
     "scrolled": true
@@ -171,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "e2883c8b",
    "metadata": {},
    "outputs": [
@@ -211,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "480ea6aa",
    "metadata": {},
    "outputs": [],
@@ -222,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "0580f773",
    "metadata": {
     "scrolled": true
@@ -250,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "aad8000f",
    "metadata": {},
    "outputs": [
@@ -288,76 +273,336 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c19de9ad",
+   "cell_type": "markdown",
+   "id": "961f8f7b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 인공신경망 모델 만들기\n",
+    "\n",
+    "기본적인 인공 신경망은 확률적 경사 하강법을 사용하는 로지스틱 회귀와 같음\n",
+    "\n",
+    "- **뉴런**\n",
+    "\n",
+    "최종값을 계산하는 단위로 선형 계산이 일어난다. 뉴런대신 유닛이라 부르기도함.\n",
+    "\n",
+    "- **텐서플로와 케라스**\n",
+    "\n",
+    "GPU는 벡터와 행렬연산에 최적화되어 곱셈과 덧셈 수행이 많은 인공 신경망 연산에 효과적임. \n",
+    "\n",
+    "케라스는 직접 GPU연산을 하지 않지만 텐서플로가 백엔드 라이브러리로서 이를 수행(그밖에도 씨아노, CNTK 등)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f9e186fa",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "ebae3aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "f08aa2fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 훈련세트 <-> 검증세트\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train_scaled, val_scaled, train_target, val_target = train_test_split(\n",
+    "    train_scaled, train_target, test_size=0.2, random_state=42)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "607bd96f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "훈련 데이터셋의 크기\n",
+      "(48000, 784) (48000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"훈련 데이터셋의 크기\")\n",
+    "print(train_scaled.shape, train_target.shape)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "cc04a8ef",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검증 데이터셋의 크기\n",
+      "(12000, 784) (12000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"검증 데이터셋의 크기\")\n",
+    "print(val_scaled.shape, val_target.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4fcca75",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 훈련 세트로 모델 만들고 검증 세트로 모델 평가\n",
+    "\n",
+    "- **밀집층(dense)**\n",
+    "\n",
+    "신경마엥서 가장 기본 층인 밀집층을 만드는 클래스.\n",
+    "\n",
+    "케라스 레이어 패키지안에 준비된 다양한 층으로 입력층의 n개의 뉴런(피처)와 출력층의 m개의 뉴런(예측레이블)을 모두 연결된 선.nxm개.\n",
+    "\n",
+    "양쪽 뉴런을 모두 연결하고 있는 것을 완전 연결층이라고 부름.\n",
+    "\n",
+    "뉴런크기, 뉴런 출력에 적용할 함수, 입력크기 순으로 입력\n",
+    "\n",
+    "`softmax` -> 출력값을 확률로 바꾸기 위해 사용/`활성화함수`"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "c60dfb66",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dense = keras.layers.Dense(10, activation='softmax', input_shape=(784,))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bce4538d",
+   "metadata": {},
+   "source": [
+    "#### 밀집층을 가진 신경말 모델 만들기"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "bd04dc62",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = keras.Sequential(dense)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6832d59c",
+   "cell_type": "markdown",
+   "id": "f321933c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 인공 신경망으로 패션 아이템 분류하기\n",
+    "\n",
+    "\n",
+    "케라스\n",
+    "\n",
+    "model 객체에 compile() 매서드 수행하여 손실함수 지정해야함\n",
+    "\n",
+    "- **손실함수 종류**\n",
+    "\n",
+    "> 이진 분류: loss = `binary_crossentropy`\n",
+    "\n",
+    "> 다중 분류:loss = `categorical_crossentropy`\n",
+    "\n",
+    "\n",
+    "* `sparse`이 덧붙는 이유\n",
+    "\n",
+    "이진분류시 출력 뉴런은 양성 클래스에 대한 확률 a만 출력함. 음성클래스 확률은 1-a로 구할 수 잇는데 크로스 엔트로피 손실 계산시 음성 클래스가 0이면 0에 무엇을 곱해도 0이 되므로 1로 바꾼뒤 (1-타깃값) 계산함.\n",
+    "\n",
+    "다중 분류시 n개의 레이블 중 a1의 크로스 엔트로피 손실함수를 적용하고 싶다면 a1을 제외한 함수출력에 0을 곱한다. 이렇게 타깃값을 해당 클리스만 1이고 나머지는 모두 0인 배열로 만드는 것. `원-핫 인코딩` 이라고 함."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "1312966c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# compile() 모델 객체를 만든 후 훈련하기 전 손실함수, 측정지표 지정 매서드\n",
+    "\n",
+    "model.compile(loss='sparse_categorical_crossentropy', metrics='accuracy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06b84e53",
+   "metadata": {},
+   "source": [
+    "#### MNIST 데이터 타깃값 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d5229f13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 3 5 8 6 9 3 3 9 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_target[:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19561c54",
+   "metadata": {},
+   "source": [
+    "모두 정수로 구성됨. 텐서는 타깃값이 정수이면 원-핫이니코딩하지 않고 가능함. 손실함수를 sparse_categorical_crossentropy로 지정해야함. sparse는 희소라는 뜻. 만약 원-핫 인코딩이 준비됐다면 compile()에서 손실함수에서 sparse를 지우고 사용하면 된다.\n",
+    "\n",
+    "* `metrics`: 정확도 지표 지정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "82c7eac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1500/1500 [==============================] - 4s 910us/step - loss: 0.6069 - accuracy: 0.7947\n",
+      "Epoch 2/5\n",
+      "1500/1500 [==============================] - 1s 909us/step - loss: 0.4742 - accuracy: 0.8382\n",
+      "Epoch 3/5\n",
+      "1500/1500 [==============================] - 1s 917us/step - loss: 0.4508 - accuracy: 0.8474\n",
+      "Epoch 4/5\n",
+      "1500/1500 [==============================] - 1s 865us/step - loss: 0.4367 - accuracy: 0.8527\n",
+      "Epoch 5/5\n",
+      "1500/1500 [==============================] - 1s 860us/step - loss: 0.4280 - accuracy: 0.8555\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x272f7623ca0>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(train_scaled, train_target, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9254adcd",
+   "metadata": {},
+   "source": [
+    "### model.evaluate()\n",
+    "\n",
+    "사이킷런에서 model.score()과 비슷한 기능. 모델의 성능 평가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "90650081",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "375/375 [==============================] - 1s 927us/step - loss: 0.4526 - accuracy: 0.8465\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.45262548327445984, 0.8464999794960022]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(val_scaled, val_target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "553d9f9f",
+   "metadata": {},
+   "source": [
+    "모델을 검증데이터셋에 적용했을때 적확도 약 84.46% 정확도"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f5cb45",
+   "metadata": {},
+   "source": [
+    "## 정리\n",
+    "\n",
+    "### TensorFlow\n",
+    "\n",
+    "\n",
+    "|TensorFlow|내용|\n",
+    "|------|---|\n",
+    "|Dense|밀집층|\n",
+    "|Sequential|신경망 모델을 만드는 클래스|\n",
+    "|compile|훈련 전 손실함수와 측정 지표 지정 메서드|\n",
+    "|fit|모델을 훈련하는 메서드|\n",
+    "|evaluate|모델 성능 평가 메서드|\n",
+    "\n",
+    "### 인공 신경망\n",
+    "\n",
+    "|개념|내용|\n",
+    "|------|---|\n",
+    "|인공 신경망|머신러닝 알고리즘 중 하나. 딥러닝이라고도 부름.|\n",
+    "|텐서플로|구글의 딥러닝 라이브러리|\n",
+    "|원-핫 인코딩|정숫값을 배열에서 해당 정수 위치의 원소만 1이고 나머지는 모두 0으로 변환하는 것. 다중 분류에서 출력층에서 만든 확률과 크로스 엔트로피 손실을 계산하기 위한 과정임|\n"
+   ]
   }
  ],
  "metadata": {
